--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,10 +8,104 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700&display=swap" rel="stylesheet">
     <script src="/JS/script.js"></script>
-    <link rel="stylesheet" href="Code/PDD-Signs/CSS/reset.css">
-    <link rel="stylesheet" href="http://localhost:8000/PDD-Signs/CSS/styles.css">
+    <link rel="stylesheet" href="/CSS/reset.css">
+    <link rel="stylesheet" href="/CSS/styles.css">
     <title>Знаки ПДД РФ</title>
 </head>
 <body>
+    <div class="main">
+        <div class="headings">
+            <p class="col_name">Основные разделы</p>
+            <div class="heading">
+                <div class="h_icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                        <g clip-path="url(#clip0_100_12)">
+                          <path d="M0 2C3.63331 -0.422205 8.36669 -0.422205 12 2V18C8.36669 15.5778 3.63331 15.5778 0 18V2Z" fill="white"/>
+                          <path d="M0 22C3.63331 19.5778 8.36669 19.5778 12 22V24C8.36669 21.5778 3.63331 21.5778 0 24V22Z" fill="white"/>
+                          <path d="M12 23L12 17" stroke="white" stroke-width="2"/>
+                          <path d="M1 23L1 17" stroke="white" stroke-width="2"/>
+                          <path d="M23 23L23 17" stroke="white" stroke-width="2"/>
+                          <path d="M12 2C15.6333 -0.422205 20.3667 -0.422205 24 2V18C20.3667 15.5778 15.6333 15.5778 12 18V2Z" fill="white"/>
+                          <path d="M12 22C15.6333 19.5778 20.3667 19.5778 24 22V24C20.3667 21.5778 15.6333 21.5778 12 24V22Z" fill="white"/>
+                        </g>
+                        <defs>
+                          <clipPath id="clip0_100_12">
+                            <rect width="24" height="24" fill="white"/>
+                          </clipPath>
+                        </defs>
+                    </svg>
+                </div>
+                <p>ПДД</p>
+            </div>
+
+            <div class="heading">
+                <div class="h_icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                        <g clip-path="url(#clip0_100_83)">
+                          <path d="M15.1305 3.90689C13.8407 1.32721 10.1593 1.32723 8.8695 3.90689L2.10557 17.4348C0.941996 19.7619 2.63423 22.5 5.23607 22.5H18.7639C21.3658 22.5 23.058 19.7619 21.8944 17.4347L15.1305 3.90689Z" stroke="white" stroke-width="3"/>
+                          <path d="M10.2828 9.9799C10.1336 8.93492 10.9444 8 12 8C13.0556 8 13.8664 8.93492 13.7172 9.9799L13.1414 14.0101C13.0603 14.5781 12.5738 15 12 15C11.4262 15 10.9397 14.5781 10.8586 14.0101L10.2828 9.9799Z" fill="white"/>
+                          <circle cx="12" cy="17" r="1" fill="white"/>
+                        </g>
+                        <defs>
+                          <clipPath id="clip0_100_83">
+                            <rect width="24" height="24" fill="white"/>
+                          </clipPath>
+                        </defs>
+                    </svg>
+                </div>
+                <p>Знаки</p>
+            </div>
+
+            <div class="heading">
+                <div class="h_icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                        <g clip-path="url(#clip0_100_91)">
+                          <rect x="1.5" y="1.5" width="21" height="21" stroke="white" stroke-width="3"/>
+                          <path d="M23 1L0.999999 23" stroke="white" stroke-width="3"/>
+                          <path d="M24 10L10 24" stroke="white" stroke-width="3"/>
+                          <path d="M14 0L-1.5913e-08 14" stroke="white" stroke-width="3"/>
+                        </g>
+                        <defs>
+                          <clipPath id="clip0_100_91">
+                            <rect width="24" height="24" fill="white"/>
+                          </clipPath>
+                        </defs>
+                      </svg>
+                </div>
+                <p>Разметка</p>
+            </div>
+
+            <div class="heading">
+                <div class="h_icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                        <g clip-path="url(#clip0_100_99)">
+                          <path d="M23 10H20.48C20.2581 10.0095 20.0394 9.94485 19.8584 9.81629C19.6773 9.68774 19.5442 9.50258 19.48 9.29C19.398 9.05412 19.3011 8.82366 19.19 8.6C19.0892 8.4101 19.0522 8.19275 19.0846 7.9802C19.1171 7.76764 19.2171 7.5712 19.37 7.42L21.15 5.64C21.2437 5.54704 21.3181 5.43644 21.3689 5.31458C21.4197 5.19272 21.4458 5.06201 21.4458 4.93C21.4458 4.79799 21.4197 4.66728 21.3689 4.54542C21.3181 4.42356 21.2437 4.31296 21.15 4.22L19.78 2.81C19.687 2.71627 19.5764 2.64188 19.4546 2.59111C19.3327 2.54034 19.202 2.5142 19.07 2.5142C18.938 2.5142 18.8073 2.54034 18.6854 2.59111C18.5636 2.64188 18.453 2.71627 18.36 2.81L16.58 4.59C16.4288 4.74287 16.2324 4.84294 16.0198 4.87537C15.8072 4.90779 15.5899 4.87084 15.4 4.77C15.1763 4.6589 14.9459 4.56204 14.71 4.48C14.4974 4.41581 14.3123 4.28268 14.1837 4.10162C14.0552 3.92056 13.9905 3.70186 14 3.48V1C14 0.734784 13.8946 0.48043 13.7071 0.292893C13.5196 0.105357 13.2652 0 13 0L11 0C10.7348 0 10.4804 0.105357 10.2929 0.292893C10.1054 0.48043 10 0.734784 10 1V3.52C10.0095 3.74186 9.94485 3.96056 9.81629 4.14162C9.68774 4.32268 9.50258 4.45581 9.29 4.52C9.05412 4.60204 8.82366 4.6989 8.6 4.81C8.4101 4.91084 8.19275 4.94779 7.9802 4.91537C7.76764 4.88294 7.5712 4.78287 7.42 4.63L5.64 2.81C5.54704 2.71627 5.43644 2.64188 5.31458 2.59111C5.19272 2.54034 5.06201 2.5142 4.93 2.5142C4.79799 2.5142 4.66728 2.54034 4.54542 2.59111C4.42356 2.64188 4.31296 2.71627 4.22 2.81L2.81 4.22C2.71627 4.31296 2.64188 4.42356 2.59111 4.54542C2.54034 4.66728 2.5142 4.79799 2.5142 4.93C2.5142 5.06201 2.54034 5.19272 2.59111 5.31458C2.64188 5.43644 2.71627 5.54704 2.81 5.64L4.59 7.42C4.74287 7.5712 4.84294 7.76764 4.87537 7.9802C4.90779 8.19275 4.87084 8.4101 4.77 8.6C4.6589 8.82366 4.56204 9.05412 4.48 9.29C4.41581 9.50258 4.28268 9.68774 4.10162 9.81629C3.92056 9.94485 3.70186 10.0095 3.48 10H1C0.734784 10 0.48043 10.1054 0.292893 10.2929C0.105357 10.4804 0 10.7348 0 11L0 13C0 13.2652 0.105357 13.5196 0.292893 13.7071C0.48043 13.8946 0.734784 14 1 14H3.52C3.74186 13.9905 3.96056 14.0552 4.14162 14.1837C4.32268 14.3123 4.45581 14.4974 4.52 14.71C4.60204 14.9459 4.6989 15.1763 4.81 15.4C4.91084 15.5899 4.94779 15.8072 4.91537 16.0198C4.88294 16.2324 4.78287 16.4288 4.63 16.58L2.81 18.36C2.71627 18.453 2.64188 18.5636 2.59111 18.6854C2.54034 18.8073 2.5142 18.938 2.5142 19.07C2.5142 19.202 2.54034 19.3327 2.59111 19.4546C2.64188 19.5764 2.71627 19.687 2.81 19.78L4.22 21.19C4.31296 21.2837 4.42356 21.3581 4.54542 21.4089C4.66728 21.4597 4.79799 21.4858 4.93 21.4858C5.06201 21.4858 5.19272 21.4597 5.31458 21.4089C5.43644 21.3581 5.54704 21.2837 5.64 21.19L7.42 19.41C7.5712 19.2571 7.76764 19.1571 7.9802 19.1246C8.19275 19.0922 8.4101 19.1292 8.6 19.23C8.82366 19.3411 9.05412 19.438 9.29 19.52C9.50258 19.5842 9.68774 19.7173 9.81629 19.8984C9.94485 20.0794 10.0095 20.2981 10 20.52V23C10 23.2652 10.1054 23.5196 10.2929 23.7071C10.4804 23.8946 10.7348 24 11 24H13C13.2652 24 13.5196 23.8946 13.7071 23.7071C13.8946 23.5196 14 23.2652 14 23V20.48C13.9905 20.2581 14.0552 20.0394 14.1837 19.8584C14.3123 19.6773 14.4974 19.5442 14.71 19.48C14.9459 19.398 15.1763 19.3011 15.4 19.19C15.5899 19.0892 15.8072 19.0522 16.0198 19.0846C16.2324 19.1171 16.4288 19.2171 16.58 19.37L18.36 21.15C18.453 21.2437 18.5636 21.3181 18.6854 21.3689C18.8073 21.4197 18.938 21.4458 19.07 21.4458C19.202 21.4458 19.3327 21.4197 19.4546 21.3689C19.5764 21.3181 19.687 21.2437 19.78 21.15L21.19 19.74C21.2837 19.647 21.3581 19.5364 21.4089 19.4146C21.4597 19.2927 21.4858 19.162 21.4858 19.03C21.4858 18.898 21.4597 18.7673 21.4089 18.6454C21.3581 18.5236 21.2837 18.413 21.19 18.32L19.41 16.54C19.2571 16.3888 19.1571 16.1924 19.1246 15.9798C19.0922 15.7672 19.1292 15.5499 19.23 15.36C19.3411 15.1363 19.438 14.9059 19.52 14.67C19.5842 14.4574 19.7173 14.2723 19.8984 14.1437C20.0794 14.0152 20.2981 13.9505 20.52 13.96H23C23.2652 13.96 23.5196 13.8546 23.7071 13.6671C23.8946 13.4796 24 13.2252 24 12.96V11C24 10.7348 23.8946 10.4804 23.7071 10.2929C23.5196 10.1054 23.2652 10 23 10ZM12 16C11.2089 16 10.4355 15.7654 9.77772 15.3259C9.11992 14.8864 8.60723 14.2616 8.30448 13.5307C8.00173 12.7998 7.92252 11.9956 8.07686 11.2196C8.2312 10.4437 8.61216 9.73098 9.17157 9.17157C9.73098 8.61216 10.4437 8.2312 11.2196 8.07686C11.9956 7.92252 12.7998 8.00173 13.5307 8.30448C14.2616 8.60723 14.8864 9.11992 15.3259 9.77772C15.7654 10.4355 16 11.2089 16 12C16 13.0609 15.5786 14.0783 14.8284 14.8284C14.0783 15.5786 13.0609 16 12 16Z" fill="white"/>
+                        </g>
+                        <defs>
+                          <clipPath id="clip0_100_99">
+                            <rect width="24" height="24" fill="white"/>
+                          </clipPath>
+                        </defs>
+                      </svg>
+                </div>
+                <p>Перечень неисправностей</p>
+            </div>
+
+            <div class="heading">
+                <div class="h_icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M4.10379 4.58017C4.33787 3.0066 5.5938 1.78298 7.17294 1.58998C10.3791 1.19812 13.621 1.19812 16.8271 1.58998C18.4062 1.78298 19.6622 3.0066 19.8962 4.58018L20.1074 6H21.6126C22.2951 6 22.7771 6.6687 22.5613 7.31623L22.2279 8.31623C22.0918 8.72457 21.7097 9 21.2793 9H21.2573C21.9272 9.59077 22.401 10.4059 22.5571 11.3424L23.4178 16.5068C23.6293 17.7756 23.0151 18.9654 22 19.575V22C22 22.5523 21.5523 23 21 23H19C18.4477 23 18 22.5523 18 22V20H6.00001V22C6.00001 22.5523 5.5523 23 5.00001 23H3.00001C2.44773 23 2.00001 22.5523 2.00001 22V19.575C0.984894 18.9654 0.370747 17.7756 0.58221 16.5068L1.44294 11.3424C1.59903 10.4059 2.07278 9.59077 2.74276 9H2.72077C2.29034 9 1.9082 8.72457 1.77209 8.31623L1.43875 7.31623C1.22291 6.6687 1.70488 6 2.38744 6H3.89257L4.10379 4.58017ZM18.0063 4.33081C17.8505 3.75554 17.3702 3.32618 16.7811 3.23555C13.6124 2.74805 10.3877 2.74805 7.21889 3.23555C6.62983 3.32618 6.14955 3.75554 5.99375 4.33081L5.50129 6.14911C5.24865 7.08194 5.95114 8 6.91757 8H17.0824C18.0489 8 18.7514 7.08194 18.4987 6.14911L18.0063 4.33081ZM16.8563 14.9307C16.8199 14.4066 16.3841 14 15.8587 14H8.1413C7.61591 14 7.18011 14.4066 7.14371 14.9307L7.07426 15.9307C7.03411 16.5089 7.4923 17 8.07186 17H15.9282C16.5077 17 16.9659 16.5089 16.9258 15.9307L16.8563 14.9307ZM5.00001 15.5C5.00001 16.3284 4.32843 17 3.50001 17C2.67158 17 2.00001 16.3284 2.00001 15.5C2.00001 14.6716 2.67158 14 3.50001 14C4.32843 14 5.00001 14.6716 5.00001 15.5ZM20.5 17C21.3284 17 22 16.3284 22 15.5C22 14.6716 21.3284 14 20.5 14C19.6716 14 19 14.6716 19 15.5C19 16.3284 19.6716 17 20.5 17Z" fill="white"/>
+                      </svg>
+                </div>
+                <p>О допуске</p>
+            </div>
+        </div>
+
+        <div class="subheadings">
+            <p class="col_name">Основные разделы</p>
+        </div>
+
+        <div class="content"></div>
+    </div>
 </body>
-</html>
+</html> 
